--- a/configurations/regions/ap-southeast-1/ap-southeast-1-jenkins.json
+++ b/configurations/regions/ap-southeast-1/ap-southeast-1-jenkins.json
@@ -1,5 +1,5 @@
 {
-    "region"          : "eu-west-1",
+    "region"          : "ap-southeast-1",
     "instance_type"   : "t2.micro",
     "ami_id"          : "ami-02a39bdb8e8ee056a",
     "ssh_username"    : "ec2-user"
